# storage/api-docs/api-docs.json
@@ -14,7 +14,7 @@
     },
     "servers": [
         {
-            "url": "http://127.0.0.1:8001/api",
+            "url": "http://my-default-host.com",
             "description": "Ticket Booking System API Server"
         }
     ],
@@ -429,6 +429,53 @@
                     },
                     "404": {
                         "description": "Booking not found"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
+        "/admin/daily-summary": {
+            "get": {
+                "tags": [
+                    "Admin"
+                ],
+                "summary": "Get daily summary statistics (Admin only)",
+                "operationId": "cbceaf5de38af3c2201d99f92378ccb9",
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "new_users_today": {
+                                            "type": "integer",
+                                            "example": 10
+                                        },
+                                        "total_bookings_today": {
+                                            "type": "integer",
+                                            "example": 50
+                                        },
+                                        "total_income_today": {
+                                            "type": "number",
+                                            "format": "float",
+                                            "example": 1500.75
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Unauthorized"
                     }
                 },
                 "security": [
